--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Main HTML structure -->
     <div id="wrapper">
-        <h1>UK Dining Procurement</h1>        
+        <h1>UK Dining Procurement: KY Proud and Local Purchases, 2014-2015</h1>        
         <div class="container">
             <div id="infoPane">
                 <div id="selectedBeer"></div>
@@ -28,12 +28,10 @@
                         <li><img src="img/blueSquare.svg" width="10px" height="10px"> A3</li>
                     </ul>
                     <ul>
-                        <li><img src="img/greenCircle.svg" width="10px" height="10px"> B1</li>
                         <li><img src="img/greenTriangle.svg" width="10px" height="10px"> B2</li>
                         <li><img src="img/greenSquare.svg" width="10px" height="10px"> B3</li>
                     </ul>
                     <ul>
-                        <li><img src="img/yellowCircle.svg" width="10px" height="10px"> C1</li>
                         <li><img src="img/yellowTriangle.svg" width="10px" height="10px"> C2</li>
                         <li><img src="img/yellowSquare.svg" width="10px" height="10px"> C3</li>
                     </ul>
