--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Table -->
     <script id="beerTable" type="text/html">
         <table>
-            <tr><th class="tHeader">Vendors</th></tr>
+            <tr><th class="tHeader">Vendors (listed in order of total $ spent by UK Dining)</th></tr>
             {{#rows}}
                 <tr id="{{rowNumber}}" class="beerRow"><td>{{vendor}}</td></tr>
             {{/rows}}
