added new category

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
             <div id="legend">
                 <div class="container">
                     <ul>
-                        <li><img src="img/blueCircle.svg" width="10px" height="10px"> KY Biz/Majority</li>
-                        <li><img src="img/blueTriangle.svg" width="10px" height="10px"> KY Biz/Some</li>
-                        <li><img src="img/blueSquare.svg" width="10px" height="10px"> KY Biz/None</li>
+                        <li><img src="img/blueCircle.svg" width="10px" height="10px"> KY Business/Majority</li>
+                        <li><img src="img/blueTriangle.svg" width="10px" height="10px"> KY Business/Mixed</li>
+                        <li><img src="img/blueSquare.svg" width="10px" height="10px"> KY Business/None</li>
                     </ul>
                     <ul>
-                        <li><img src="img/greenTriangle.svg" width="10px" height="10px"> Processor/Some</li>
-                        <li><img src="img/greenSquare.svg" width="10px" height="10px"> Processor/None</li>
+                        <li><img src="img/greenCircle.svg" width="10px" height="10px"> KY Processor/Majority</li>
+                        <li><img src="img/greenTriangle.svg" width="10px" height="10px"> KY Processor/Mixed</li>
+                        <li><img src="img/greenSquare.svg" width="10px" height="10px"> KY Processor/None</li>
                     </ul>
                     <ul>
-                        <li><img src="img/yellowTriangle.svg" width="10px" height="10px"> Distributor/Some</li>
-                        <li><img src="img/yellowSquare.svg" width="10px" height="10px"> Distributor/None</li>
+                        <li><img src="img/yellowTriangle.svg" width="10px" height="10px"> KY Distributor/Mixed</li>
+                        <li><img src="img/yellowSquare.svg" width="10px" height="10px"> KY Distributor/None</li>
                     </ul>
                 </div>
             </div>
