--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     
     <!-- Meta  -->
-        <title>UK Dining: KY Proud and Local Vendors (FY 15)</title>
+        <title>UK Dining Sourcing: KY Proud and Local Vendors (FY 14-15)</title>
         <meta charset='utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -14,7 +14,7 @@
 <body>
 <!-- Main HTML structure -->
     <div id="wrapper">
-        <h1>UK Dining: KY Proud and Local Vendors (FY 15)</h1>        
+        <h1>UK Dining Sourcing: KY Proud and Local Vendors (FY 14-15)</h1>        
         <div class="container">
             <div id="infoPane">
                 <div id="selectedBeer"></div>
@@ -63,7 +63,7 @@
             <p>{{city}}{{#state}}, {{state}}{{/state}}{{#zip}} {{zip}}{{/zip}}</p>
             <ul>
                 {{#items}}<li><span class="category">General Items Purchased by UK Dining:</span>{{items}}</li>{{/items}}
-                {{#money}}<li><span class="category">Total Money Spent:</span>{{money}}</li>{{/money}}
+                {{#distributor}}<li><span class="category">Procurement Channel:</span>{{distributor}}</li>{{/distributor}}
         {{/rows}}
     </script> 
 
