--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
             <div id="legend">
                 <div class="container">
                     <ul>
-                        <li><img src="img/blueCircle.svg" width="10px" height="10px"> KY Business/Majority</li>
-                        <li><img src="img/blueTriangle.svg" width="10px" height="10px"> KY Business/Mixed</li>
-                        <li><img src="img/blueSquare.svg" width="10px" height="10px"> KY Business/None</li>
+                        <li id='A1'><img src="img/blueCircle.svg" width="10px" height="10px"> KY Business/Majority</li>
+                        <li id='A2'><img src="img/blueTriangle.svg" width="10px" height="10px"> KY Business/Mixed</li>
+                        <li id='A3'><img src="img/blueSquare.svg" width="10px" height="10px"> KY Business/None</li>
                     </ul>
                     <ul>
-                        <li><img src="img/greenCircle.svg" width="10px" height="10px"> KY Processor/Majority</li>
-                        <li><img src="img/greenTriangle.svg" width="10px" height="10px"> KY Processor/Mixed</li>
-                        <li><img src="img/greenSquare.svg" width="10px" height="10px"> KY Processor/None</li>
+                        <li id='B1'><img src="img/greenCircle.svg" width="10px" height="10px"> KY Processor/Majority</li>
+                        <li id='B2'><img src="img/greenTriangle.svg" width="10px" height="10px"> KY Processor/Mixed</li>
+                        <li id='B3'><img src="img/greenSquare.svg" width="10px" height="10px"> KY Processor/None</li>
                     </ul>
                     <ul>
-                        <li><img src="img/yellowTriangle.svg" width="10px" height="10px"> KY Distributor/Mixed</li>
-                        <li><img src="img/yellowSquare.svg" width="10px" height="10px"> KY Distributor/None</li>
+                        <li id='C2'><img src="img/yellowTriangle.svg" width="10px" height="10px"> KY Distributor/Mixed</li>
+                        <li id='C3'><img src="img/yellowSquare.svg" width="10px" height="10px"> KY Distributor/None</li>
+                    </ul>
+                    <ul>
+                        <li id='all'><img src="img/beer.png" width="10px" height="10px"> ALL</li>
                     </ul>
                 </div>
             </div>
