changed all vendors

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                     <ul>
                         <li id='C2'><img src="img/yellowTriangle.svg" width="10px" height="10px"> KY Distributor/Mixed</li>
                         <li id='C3'><img src="img/yellowSquare.svg" width="10px" height="10px"> KY Distributor/None</li>
-                    </ul>
-                    <ul>
-                        <li id='all'><img src="img/beer.png" width="10px" height="10px"> ALL</li>
+                        <li id='all'>ALL VENDORS</li>
                     </ul>
                 </div>
             </div>
