--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Main HTML structure -->
     <div id="wrapper">
-        <h1>UK Dining Sourcing: KY Proud and Local Vendors (FY 14-15)</h1>
+        <h1>UK Dining Sourcing: KY Proud and Local Vendors (FY 15)</h1>
         <div class="container">
             <div id="infoPane">
                 <div id="selectedBeer"></div>
